--- a/src/nicepage.css
+++ b/src/nicepage.css
@@ -42399,13 +42399,14 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 .u-footer .u-sheet-1 {
-  min-height: 445px;
+  min-height: 73px;
 }
 
 .u-footer .u-group-1 {
   width: 570px;
-  min-height: 295px;
-  margin: 50px auto 0;
+  min-height: 48px;
+  height: auto;
+  margin: 19px auto 6px;
 }
 
 .u-footer .u-container-layout-1 {
@@ -42414,84 +42415,21 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-text-1 {
-  margin: 28px 20px 0;
-}
-
-.u-footer .u-line-1 {
-  width: 54px;
-  position: relative;
-  height: 3px;
-  transform-origin: left center 0px;
-  margin: 30px auto 0;
-}
-
-.u-footer .u-text-2 {
   font-style: italic;
-  margin: 35px 20px 28px;
-}
-
-.u-footer .u-line-2 {
-  width: 1141px;
-  position: relative;
-  transform-origin: right center 0px;
-  margin: 40px auto 0 0;
-}
-
-.u-footer .u-social-icons-1 {
-  height: 24px;
-  min-height: 16px;
-  width: 137px;
-  min-width: 103px;
-  white-space: nowrap;
-  margin: 19px auto 16px 496px;
-}
-
-.u-footer .u-icon-1 {
-  height: 100%;
-}
-
-.u-footer .u-icon-2 {
-  height: 100%;
-}
-
-.u-footer .u-icon-3 {
-  height: 100%;
-}
-
-.u-footer .u-icon-4 {
-  height: 100%;
+  font-size: 0.625rem;
+  margin: 0 20px;
 }
 @media (max-width: 1199px) {
   .u-footer .u-group-1 {
     width: 470px;
     position: relative;
+    height: auto;
   }
 
   .u-footer .u-text-1 {
     position: relative;
     margin-left: 16px;
     margin-right: 16px;
-  }
-
-  .u-footer .u-line-1 {
-    width: 45px;
-  }
-
-  .u-footer .u-text-2 {
-    position: relative;
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-footer .u-line-2 {
-    width: 940px;
-    margin-left: 0;
-  }
-
-  .u-footer .u-social-icons-1 {
-    position: relative;
-    width: 137px;
-    margin-left: 409px;
   }
 }
 
@@ -42504,24 +42442,6 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-left: 9px;
     margin-right: 9px;
   }
-
-  .u-footer .u-line-1 {
-    width: 32px;
-  }
-
-  .u-footer .u-text-2 {
-    margin-left: 9px;
-    margin-right: 9px;
-  }
-
-  .u-footer .u-line-2 {
-    width: 540px;
-    margin-left: 0;
-  }
-
-  .u-footer .u-social-icons-1 {
-    margin-left: 235px;
-  }
 }
 @media (max-width: 575px) {
   .u-footer .u-group-1 {
@@ -42531,24 +42451,6 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-footer .u-text-1 {
     margin-left: 6px;
     margin-right: 6px;
-  }
-
-  .u-footer .u-line-1 {
-    width: 27px;
-  }
-
-  .u-footer .u-text-2 {
-    margin-left: 6px;
-    margin-right: 6px;
-  }
-
-  .u-footer .u-line-2 {
-    width: 340px;
-    margin-left: 0;
-  }
-
-  .u-footer .u-social-icons-1 {
-    margin-left: 148px;
   }
 }
 
